# wnotes

./: install.sh  notes  pyproject.toml  wedding_notes.py  wnotes.py
