[tool.poetry]
name = "wedding-notes"
version = "0.1.0"
description = "Wedding Notes"
authors = ["Lucas Gurgel <lucasggurgel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
rich = "^12.2.0"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
